--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,7 +4,7 @@ body {
   max-width: 650px;
   margin: 0 auto;
   padding: 0 16px;
-  background-image: url("https://images.unsplash.com/photo-1500534623283-312aade485b7?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjJ8fG5hdHVyZXxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=900&q=60");
+  background-image: url("https://images.unsplash.com/photo-1500534623283-312aade485b7?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mjl8fG5hdHVyZXxlbnwwfDB8MHx8&auto=format&fit=crop&w=800&q=60");
 
   background-size: cover;
   display: flex;
