--- a/templates/views/help.hbs
+++ b/templates/views/help.hbs
@@ -8,7 +8,8 @@
   <body>
     <div class="main-content">
       {{>header}}
-    <p>{{helpText}}</p>
+    <p>Post your queries at</p>
+    <p style="background-color: aliceblue;">harshjangitwar963@gmail.com</p>
     </div>
 
     {{>footer}}
