--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -1,6 +1,9 @@
 <html>
+
   <head>
-    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
      <link rel="icon" href="/img/weather.png">
     <link rel="stylesheet" href="/css/style.css" />
   </head>
@@ -8,7 +11,11 @@
   <body>
     <div class="main-content">
       {{>header}}
-    <img class="portrait" src="/img/me.jpeg" />
+      <div class="row">
+    <div class="col-6"><img class="portrait" src="/img/me.jpeg" /></div>
+    <div class="col-6"><h1>Harsh Jangitwar</h1>
+    <p style="font-size: 20px;">I am a highly passionate developer.</p></div>
+    </div>
     </div>
     
     {{>footer}}
