--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -1,6 +1,12 @@
 <html>
   <head>
     <title>Weather</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,500&family=Roboto+Slab&family=Space+Grotesk:wght@300&family=Space+Mono&family=Ubuntu:ital@1&display=swap" rel="stylesheet">
+    
     <link rel="icon" href="/img/weather.png">
     <link rel="stylesheet" href="/css/style.css" />
   </head>
@@ -8,12 +14,12 @@
   <body>
     <div class="main-content">
       {{>header}}
-      <p>use this site</p>
+      <p style="font-family: 'Roboto Slab', serif;">Get the real time weather information</p>
       <form>
-        <input placeholder="location">
-        <button>Search</button>
+        <input style="border-radius: 20px;" placeholder="location">
+        <button style="border-radius: 20px;">Search</button>
       </form>
-      <p id="message-1"></p>
+      <p style="font-size: 30px;" id="message-1"></p>
       <p id="message-2"></p>
     </div>
 
